# unikraft

./: .checkpatch.conf  .clang-format  .editorconfig  .gitignore  ADOPTERS.md  CODE_OF_CONDUCT.md  CODING_STYLE.md  CONTRIBUTING.md  COPYING.md  Config.uk  FAQ.md  MAINTAINERS.md  Makefile  Makefile.uk  README.md  interschimb.c  odefta.txt  text.txt  version.mk  work-product-template.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  project_backlog.yml
.github/labels/: Epic.yaml  RFC.yaml  arch.yaml  area.yaml  arm.yaml  breaking-change.yaml  bug.yaml  ci.yaml  dependencies.yaml  good-first-issue.yaml  gsoc22.yaml  hotfix.yaml  kind.yaml  lang.yaml  lgtm.yaml  lib.yaml  lifecycle.yaml  merge.yaml  misc.yaml  needs.yaml  new.yaml  patchwork-backlog.yaml  plat.yaml  priority.yaml  release-note.yaml  release-v1.0.yaml  size.yaml  state.yaml  topic.yaml  usoc21.yaml
.github/workflows/: actcheck.yaml  checkpatch.yaml  commit-format-check.yaml  integration.yaml  label.yaml  main.yml  merge.yaml  pychecks.yaml  shellcheck.yaml
arch/: Arch.uk  Config.uk  Makefile.rules
arch/arm/: Compiler.uk  Config.uk  Makefile.uk  ctx.c  divsi3.S  ectx.c  (+3 more)
doc/: Makefile
drivers/: Config.uk  Makefile.uk
gsoc-2022/: ideas.md
gsoc-2023/: README.md  ideas.md
gsoc-2024/: README.md  ideas.md
lib/: Config.uk  Makefile.uk
lib/rustfs/: Cargo.toml  Config.uk  Makefile.uk  README.md  exportsyms.uk  rustfs_vfsops.c  rustfs_vnops.c
lib/rustfs/src/: api.rs  fs.rs  lib.rs
lib/uksgx/psw/ae/aesm_service/source/: CMakeLists.txt
lib/uksgx/psw/ae/aesm_service/source/bundles/: CMakeLists.txt
lib/uksgx/psw/ae/aesm_service/source/bundles/ecdsa_quote_service_bundle/: CMakeLists.txt  ecdsa_quote_service_bundle.cpp  manifest.json
lib/uksgx/psw/ae/aesm_service/source/bundles/epid_quote_service_bundle/: CMakeLists.txt  PVEClass.cpp  PVEClass.h  QEClass.cpp  QEClass.h  aesm_ecdsa.cpp  aesm_epid_blob.cpp  aesm_epid_blob.h  aesm_xegd_blob.cpp  aesm_xegd_blob.h  endpoint_select_info.cpp  endpoint_select_info.h  epid_endpoint_selection.cpp  epid_provision_msg1.cpp  epid_provision_msg2.cpp  epid_provision_msg4.cpp  epid_quote_service_bundle.cpp  epid_utility.cpp  epid_utility.h  manifest.json  platform_info_facility.cpp  platform_info_logic.cpp  platform_info_logic.h  prov_msg_size.h  pve_logic.cpp  pve_logic.h  pve_pub_key.cpp  qe_logic.cpp  qe_logic.h
lib/uksgx/psw/ae/aesm_service/source/bundles/le_launch_service_bundle/: CMakeLists.txt  LEClass.cpp  LEClass.h  le_launch_service_bundle.cpp  manifest.json
lib/uksgx/psw/ae/aesm_service/source/bundles/linux_network_service_bundle/: CMakeLists.txt  aesm_encode.cpp  aesm_http_msg.cpp  aesm_network.h  linux_network_service_bundle.cpp  manifest.json
lib/uksgx/psw/ae/aesm_service/source/bundles/pce_service_bundle/: CMakeLists.txt  manifest.json  pce_service_bundle.cpp
lib/uksgx/psw/ae/aesm_service/source/bundles/quote_ex_service_bundle/: CMakeLists.txt  manifest.json  quote_ex_service_bundle.cpp
lib/uksgx/psw/ae/aesm_service/source/common/: AEClass.h  AESMLogicWrapper.h  AESMQueue.h  AESMQueueManager.h  AESMWorkerThread.h  CAESMServer.h  CSelector.h  IAESMQueue.h  IServerSocket.h  RequestData.h  Thread.h  UnixServerSocket.h  aesm_config.h  aesm_encode.h  aesm_exception.h  aesm_logic.h  aesm_long_lived_thread.h  aesm_proxy_type.h  aesm_quoting_type.h  aesm_rand.h  cppmicroservices_util.h  es_info.h  event_strings.h  persistent_storage_info.h  platform_info_blob.h  prof_fun.h  ssl_compat_wrapper.h  ssl_crypto.h  type_length_value.h
lib/uksgx/psw/ae/aesm_service/source/common/oal/: aesm_persistent_storage.h  aesm_thread.h  error_report.h  internal_log.h  oal.h  power.h
lib/uksgx/psw/ae/aesm_service/source/core/: AESMLogicWrapper.cpp  AESMQueueManager.cpp  AESMWorkerThread.cpp  CAESMServer.cpp  CMakeLists.txt  CSelector.cpp  Thread.cpp  UnixServerSocket.cpp  main.cpp
lib/uksgx/psw/ae/aesm_service/source/core/ipc/: AECheckUpdateStatusRequest.cpp  AECheckUpdateStatusRequest.h  AECheckUpdateStatusResponse.cpp  AECheckUpdateStatusResponse.h  AEGetLaunchTokenRequest.cpp  AEGetLaunchTokenRequest.h  AEGetLaunchTokenResponse.cpp  AEGetLaunchTokenResponse.h  AEGetQuoteExRequest.cpp  AEGetQuoteExRequest.h  AEGetQuoteExResponse.cpp  AEGetQuoteExResponse.h  AEGetQuoteRequest.cpp  AEGetQuoteRequest.h  AEGetQuoteResponse.cpp  AEGetQuoteResponse.h  AEGetQuoteSizeExRequest.cpp  AEGetQuoteSizeExRequest.h  AEGetQuoteSizeExResponse.cpp  AEGetQuoteSizeExResponse.h  AEGetSupportedAttKeyIDNumRequest.cpp  AEGetSupportedAttKeyIDNumRequest.h  AEGetSupportedAttKeyIDNumResponse.cpp  AEGetSupportedAttKeyIDNumResponse.h  AEGetSupportedAttKeyIDsRequest.cpp  AEGetSupportedAttKeyIDsRequest.h  AEGetSupportedAttKeyIDsResponse.cpp  AEGetSupportedAttKeyIDsResponse.h  AEGetWhiteListRequest.cpp  AEGetWhiteListRequest.h  AEGetWhiteListResponse.cpp  AEGetWhiteListResponse.h  AEGetWhiteListSizeRequest.cpp  AEGetWhiteListSizeRequest.h  AEGetWhiteListSizeResponse.cpp  AEGetWhiteListSizeResponse.h  AEInitQuoteExRequest.cpp  AEInitQuoteExRequest.h  AEInitQuoteExResponse.cpp  AEInitQuoteExResponse.h  (+49 more)
lib/uksgx/psw/ae/aesm_service/source/interfaces/: epid_quote_service.h  get_att_key_id.h  launch_service.h  network_service.h  pce_service.h  quote_ex_service.h  quote_provider_service.h  quote_proxy_service.h  quote_service.h  select_att_key_id.h  service.h
lib/uksgx/psw/ae/aesm_service/source/oal/: CMakeLists.txt
lib/uksgx/psw/ae/aesm_service/source/oal/linux/: aesm_thread.cpp  aesm_util.cpp  error_report.cpp  event_strings.cpp  internal_log.cpp  oal_power.cpp  persistent_storage_table.cpp
lib/uksgx/psw/ae/aesm_service/source/qcnl/: CMakeLists.txt
lib/uksgx/psw/ae/aesm_service/source/qpl/: CMakeLists.txt
lib/uksgx/psw/ae/aesm_service/source/utils/: CMakeLists.txt  aesm_config.cpp  aesm_long_lived_thread.cpp  aesm_rand.cpp  crypto_aes_gcm.cpp  crypto_cmac128.cpp  crypto_ecc.cpp  crypto_rsa.cpp  crypto_sha256_msg.cpp  ssl_compat_wrapper.cpp  type_length_value.cpp
plat/: Config.uk  Linker.uk  Makefile.uk
(+3550 files in other folders)
